--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 # App settings file
 appsettings.json
 appsettings.Development.json
+/PracticeDonGU_Back/appsettings.Development.json
+/PracticeDonGU_Back/appsettings.json
