add: models, migration, context, mineral controller and service.

--- a/PracticeDonGU_Back/appsettings.Example.json
+++ b/PracticeDonGU_Back/appsettings.Example.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=...;Database=...;AttachDbFileName=...;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
