add: cors configuration.

--- a/PracticeDonGU_Back/appsettings.Example.json
+++ b/PracticeDonGU_Back/appsettings.Example.json
@@ -7,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Origin": "http://client_address:client_port"
 }
